<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CreateNominationActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:paddingTop="30dp"
        android:paddingBottom="10dp">

        <TextView
            style="@style/bold_headline_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/create_a_nomination"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                android:src="@drawable/artwork_create" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingBottom="50dp">

                <TextView
                    style="@style/bold_headline_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/id_like_to_nominate"
                    android:textAllCaps="true"
                    android:textColor="@color/black" />

                <TextView
                    style="@style/body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/id_like_to_nominate_subtitle"
                    android:textColor="@color/black" />

                <!-- TODO: Add the drop down selector of nominees -->

                <TextView
                    style="@style/bold_headline_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/cube_name"
                    android:textColor="@color/black" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:boxCornerRadiusBottomEnd="0dp"
                    app:boxCornerRadiusBottomStart="0dp"
                    app:boxCornerRadiusTopEnd="0dp"
                    app:boxCornerRadiusTopStart="0dp"
                    app:hintEnabled="false">

                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteTextView"
                        style="@style/body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:dropDownSelector="@drawable/pink_chevron"
                        android:hint="@string/select_option"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="40dp"
                    android:background="@color/grey_mild" />

                <TextView
                    style="@style/bold_headline_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/reason_title"
                    android:textAllCaps="true"
                    android:textColor="@color/black" />

                <TextView
                    style="@style/body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/reason_subtitle"
                    android:textColor="@color/black" />

                <!-- TODO: Add the Edit text for the reason -->

                <TextView
                    style="@style/bold_headline_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/reasoning"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/editTextTextMultiLine"
                    style="@style/body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:gravity="start|top"
                    android:hint="@string/reasoning_hint"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:maxLength="280"
                    android:lines="8"
                    android:padding="20dp"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="40dp"
                    android:background="@color/grey_mild" />

                <TextView
                    style="@style/bold_headline_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/process_title"
                    android:textColor="@color/black" />

                <TextView
                    style="@style/body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/process_subtitle"
                    android:textColor="@color/black" />

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp">

                    <RadioButton
                        android:id="@+id/very_unfair"
                        style="@style/bold_headline_small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/radio_button_background"
                        android:drawableEnd="@drawable/very_unfair"
                        android:drawablePadding="20dp"
                        android:layoutDirection="rtl"
                        android:padding="15dp"
                        android:text="@string/very_unfair" />

                    <RadioButton
                        android:id="@+id/unfair"
                        style="@style/bold_headline_small"
                        android:background="@drawable/radio_button_background"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/unfair"
                        android:drawablePadding="20dp"
                        android:layoutDirection="rtl"
                        android:layout_marginTop="10dp"
                        android:padding="15dp"
                        android:text="@string/unfair" />

                    <RadioButton
                        android:id="@+id/not_sure"
                        style="@style/bold_headline_small"
                        android:background="@drawable/radio_button_background"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/not_sure"
                        android:drawablePadding="20dp"
                        android:layoutDirection="rtl"
                        android:layout_marginTop="10dp"
                        android:padding="15dp"
                        android:text="@string/not_sure" />

                    <RadioButton
                        android:id="@+id/fair"
                        style="@style/bold_headline_small"
                        android:background="@drawable/radio_button_background"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/fair"
                        android:drawablePadding="20dp"
                        android:layoutDirection="rtl"
                        android:layout_marginTop="10dp"
                        android:padding="15dp"
                        android:text="@string/fair" />

                    <RadioButton
                        android:id="@+id/very_fair"
                        style="@style/bold_headline_small"
                        android:background="@drawable/radio_button_background"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/very_fair"
                        android:drawablePadding="20dp"
                        android:layoutDirection="rtl"
                        android:layout_marginTop="10dp"
                        android:padding="15dp"
                        android:text="@string/very_fair" />
                </RadioGroup>

                <!-- TODO: Add the Radio button for the feedback -->
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:elevation="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp"
        android:paddingVertical="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back_button"
            style="@style/button_outline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="7dp"
            android:layout_weight="1"
            android:text="@string/back" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_button"
            style="@style/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_weight="2"
            android:enabled="false"
            android:text="@string/submit_nomination" />

    </LinearLayout>
</LinearLayout>